[project]
name = "uxaag"
version = "0.1.0"
description = ""
authors = [
    {name = "NQD190523",email = "duc19052003@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "uxaag", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
